Allow copying previous settings file so it is not overwritten
Signed-off-by: Gavin Pease <gavinpease@gmail.com>